[package]
name = "rectpack"
version = "0.1.0"
edition = "2021"
description = "Efficently pack rectangles into a bin."
readme = "README.md"
repository = "https://github.com/jaspwr/rectpack"
license = "MIT"
keywords = ["binpack", "rectangle", "packing", "2d", "algorithm"]

[dependencies]
rand = "0.9.0"

[dev-dependencies]
